# dlopkit

./: README.md  build.gradle  gradle.properties  jitpack.yml  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml  activity_multi.xml  activity_ui_empty_layout.xml  activity_ui_helper.xml  activity_ui_item_layout.xml  activity_video.xml  activity_web_view.xml  playword_layout_popuwindow.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
camerakit/: build.gradle
camerakit/src/main/: AndroidManifest.xml
camerakit/src/main/res/color/: dracula_bottom_toolbar_apply.xml  dracula_bottom_toolbar_preview.xml  dracula_preview_bottom_toolbar_apply.xml  zhihu_bottom_toolbar_apply.xml  zhihu_bottom_toolbar_preview.xml  zhihu_preview_bottom_toolbar_apply.xml
camerakit/src/main/res/layout/: activity_matisse.xml  activity_media_preview.xml  album_list_item.xml  media_grid_content.xml  media_grid_item.xml  photo_capture_item.xml
camerakit/src/main/res/values/: colors.xml  strings.xml  styles.xml
config/: config.gradle
corekit/: build.gradle
corekit/src/main/: AndroidManifest.xml
corekit/src/main/res/layout/: dlop_control_view_layout.xml
editorkit/: build.gradle
editorkit/src/main/: AndroidManifest.xml
editorkit/src/main/assets/: rich_editor.js
floatkit/: build.gradle
floatkit/src/main/: AndroidManifest.xml
floatkit/src/main/res/layout/: dlop_activity_layout.xml  dlop_control_view_layout.xml
floatkit/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
libcommon/: build.gradle
libcommon/src/main/: AndroidManifest.xml
matisse/: build.gradle
uikit/: build.gradle
uikit/src/main/: AndroidManifest.xml
updatekit/: build.gradle
updatekit/src/main/: AndroidManifest.xml
updatekit/src/main/cpp/: CMakeLists.txt  bsdiff.c  bsdiff.h  bspatch.c  bspatch.h  updatekit.cpp
videokit/: build.gradle
videokit/src/main/: AndroidManifest.xml
videokit/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native-lib.h
videokit/src/main/cpp/include/libavformat/: avformat.h
videokit/src/main/cpp/include/libavutil/: ffversion.h
videokit/src/main/cpp/include/libvideo/: video_decode.h  video_utils.h
(+135 files in other folders)
